--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<div class="main">
 			<audio></audio>
 			<div class="thumbnail">
-				<img src="">
+				<img src="./files/bio.jpg">
 			</div>
 			<div class="seekbar">
 				<input type="range">
